--- a/style.css
+++ b/style.css
@@ -1,4 +1,43 @@
-html {
-  height: 100%;
-  width: 100%;
+.titulo-principal {
+  padding-left: 20px;
+}
+
+
+.principal {
+  background-color: #CCCC;
+  padding: 30px;
+}
+
+
+p {
+  text-align: center;
+}
+
+
+em strong {
+  color: #FF0000;
+}
+
+.beneficios {
+  background-color: #FFFFFF;
+  padding: 20px;
+}
+
+.item {
+  font-style: italic;
+}
+
+ul {
+  display: inline-block;
+  vertical-align: top;
+  width: 20%;
+margin-right: 15%;
+}
+
+.texto-centralizado {
+  text-align: center;
+}
+
+.imagem-beneficios {
+  width: 50%;
 }
